# VX-01

./: .dockerignore  .env  .gitignore  README.md  build.sh  deploy-rdk.sh  docker-compose.rdk.yml  docker-compose.yml
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/: linux_ros.pkg  readme.md  unpack_linux_ros.sh
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/windows/: CMakeLists.txt
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/windows/libs/include/opencv/opencv2/: core.hpp  imgproc.hpp
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/windows/libs/include/opencv/opencv2/dnn/: dnn.hpp
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/windows/libs/include/opencv/opencv2/flann/: hierarchical_clustering_index.h  kmeans_index.h
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/windows/libs/lib/x86_64-win-msvc/: AngstrongCameraSdk.lib
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/windows/release/: readme.md
c9b09fd464d4a6bbbab881292e4c0825/EaiCameraSdk_v1.2.28.20241015/demo/windows/src/: CameraSrv.cpp
docker/: Dockerfile.base  Dockerfile.sim  entrypoint.sh
docker/udev/: 99-vx01-devices.rules
eai_viewer/EaiCameraSdk_v1.2.28.20241015/demo/windows/src/: Camera.cpp  main.cpp
vx01_ws/: frames_2026-02-21_23.02.13.gv
vx01_ws/src/control/aerial/vx01_aerial_control/: CMakeLists.txt
vx01_ws/src/control/aquatic/vx01_aquatic_control/: package.xml
vx01_ws/src/control/hybrid/vx01_mode_manager/: CMakeLists.txt
vx01_ws/src/control/locomotion/vx01_hexapod_locomotion/: CMakeLists.txt
vx01_ws/src/vx01_bringup/: CMakeLists.txt  package.xml
vx01_ws/src/vx01_bringup/config/: hexapod_config.yaml  vx01_controller_manager.yaml
vx01_ws/src/vx01_bringup/config/drone/: drone_controller_manager.yaml  drone_initial_positions.yaml  drone_joint_limits.yaml
vx01_ws/src/vx01_bringup/config/hexapod/: hexapod_controller_manager.yaml  hexapod_controller_manager_hw.yaml  hexapod_initial_positions.yaml  hexapod_joint_limits.yaml  servo_mapping.yaml
vx01_ws/src/vx01_bringup/config/mavros/: apm_pluginlists.yaml  mavros_params.yaml
vx01_ws/src/vx01_bringup/config/sensors/: camera_params.yaml  imu_params.yaml  lidar_params.yaml  nav2_costmap_params.yaml  object_detection.yaml  rtabmap_params.yaml  sensor_fusion.yaml
vx01_ws/src/vx01_bringup/launch/: vx01_hw_launch.py
vx01_ws/src/vx01_bringup/scripts/: hexapod_teleop_key.py  hexapod_walk_node.cpp  test.cpp  test_single_leg.py  test_single_servo.py
vx01_ws/src/vx01_bringup/src/: hexapod_walk_node.cpp
vx01_ws/src/vx01_control/: README.md
vx01_ws/src/vx01_control/aerial/vx01_aerial_control/: package.xml
vx01_ws/src/vx01_control/aquatic/vx01_aquatic_control/: CMakeLists.txt
vx01_ws/src/vx01_control/hybrid/vx01_mode_manager/: package.xml
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/: CMakeLists.txt  package.xml
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/include/vx01_hexapod_locomotion/: hexapod_locomotion.hpp
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/include/vx01_hexapod_locomotion/control/: leg_controller.hpp
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/include/vx01_hexapod_locomotion/gait/: bezier_curve.hpp  gait_pattern.hpp
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/include/vx01_hexapod_locomotion/kinematics/: dh_parameters.hpp  forward_kinematics.hpp  inverse_kinematics.hpp  transformation_matrix.hpp
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/src/: hexapod_locomotion.cpp
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/src/control/: leg_controller.cpp
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/src/gait/: bezier_curve.cpp  gait_pattern.cpp
vx01_ws/src/vx01_control/locomotion/vx01_hexapod_locomotion/src/kinematics/: dh_parameters.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  transformation_matrix.cpp
vx01_ws/src/vx01_description/: CMakeLists.txt  package.xml
vx01_ws/src/vx01_description/launch/: vx01_rviz.launch.py
vx01_ws/src/vx01_description/meshes/drone/: prop_link_0.STL  (+3 more)
vx01_ws/src/vx01_description/urdf/: base.xacro  vx01.urdf.xacro
vx01_ws/src/vx01_hardware/vx01_drone_hardware/: CMakeLists.txt  drone_hardware_plugin.xml  package.xml
vx01_ws/src/vx01_hardware/vx01_hexapod_hardware/: CMakeLists.txt  hexapod_hardware_plugin.xml  package.xml
vx01_ws/src/vx01_hardware/vx01_hexapod_hardware/include/vx01_hexapod_hardware/: hexapod_hardware_interface.hpp
vx01_ws/src/vx01_hardware/vx01_hexapod_hardware/include/vx01_hexapod_hardware/communication/: maestro_protocol.hpp  serial_interface.hpp
vx01_ws/src/vx01_hardware/vx01_hexapod_hardware/include/vx01_hexapod_hardware/servo/: servo_config.hpp  servo_controller.hpp
vx01_ws/src/vx01_hardware/vx01_hexapod_hardware/src/: hexapod_hardware_interface.cpp
vx01_ws/src/vx01_hardware/vx01_hexapod_hardware/src/communication/: maestro_protocol.cpp  serial_interface.cpp
vx01_ws/src/vx01_hardware/vx01_hexapod_hardware/src/servo/: servo_config.cpp  servo_controller.cpp
vx01_ws/src/vx01_mavros_bridge/: CMakeLists.txt  package.xml
vx01_ws/src/vx01_mavros_bridge/include/vx01_mavros_bridge/: flight_mode_manager.hpp  mavros_bridge.hpp  motor_commander.hpp  telemetry_handler.hpp
vx01_ws/src/vx01_mavros_bridge/src/: flight_mode_manager.cpp  mavros_bridge.cpp  motor_commander.cpp  telemetry_handler.cpp
vx01_ws/src/vx01_msgs/: CMakeLists.txt  package.xml
vx01_ws/src/vx01_msgs/action/: Dive.action  Navigate.action
vx01_ws/src/vx01_msgs/msg/: DroneState.msg  HexapodState.msg  HybridMode.msg  MotorThrust.msg  UnderwaterState.msg
vx01_ws/src/vx01_msgs/srv/: Calibrate.srv  SwitchMode.srv
vx01_ws/src/vx01_perception/: CMakeLists.txt  package.xml
vx01_ws/src/vx01_simulation/: CMakeLists.txt  package.xml
vx01_ws/src/vx01_simulation/config/: bridge.yaml
vx01_ws/src/vx01_simulation/launch/: vx01_sim.launch.py  vx01_world.launch.py
vx01_ws/src/vx01_simulation/worlds/: empty_world.sdf
(+55 files in other folders)
