<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vx01_hexapod_locomotion</name>
  <version>0.0.0</version>
  <description>Locomotion stack for VX-01 hexapod robot including gait generation, inverse kinematics, and leg trajectory control for stable walking.</description>
  <maintainer email="sskzm5585@gmail.com">Gouri Shankar</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
